Automatizando o primeiro cenário BDD: Capturar cupom desconto